# tianxi

./: .gitignore  AGENTS.md  GITHUB_EXPORT_NOTES.md  README.md
apps/api-server/: README.md  pyproject.toml
apps/api-server/app/: __init__.py  ad_machine_api.py  collection_bridge_api.py  compliance_api.py  compliance_rules.py  compliance_worker.py  edu_scan_ai_calibrator.py  edu_scan_migration.py  edu_scan_performance.py  edu_scan_v2_api.py  education_collection_workbench_api.py  inventory_turnover_api.py  local_sync.py  main.py  openclaw_chat_board.py  price_tag_sync.py  product_library.py  prompt_workspace.py  retail_core.py  scheduled_task_console.py  store_display_api.py
zdt-sync/: COMPLIANCE_AND_SAFETY.md  DEVELOPMENT_FLOW.md  Dockerfile  MANIFEST.md  Makefile  OPENCLAW_MISSION.md  README.md  RUNBOOK.md  SELECTOR_CAPTURE_GUIDE.md  SETUP.md  THIRD_PARTY_NOTICE.md  TOOLS_AND_OPEN_SOURCE.md  docker-compose.yml  pyproject.toml
zdt-sync/config/: field_mapping.example.yaml  selectors.example.yaml  selectors.yaml  stores.example.yaml  stores.yaml
zdt-sync/docs/: ARCHITECTURE.md  ENTITY_SPEC_TEMPLATE.md  OPENCLAW_PROMPTS.md
zdt-sync/scripts/: cron_examples.txt  daily_sync.py  incremental_sync.py  install_macos.sh  install_ubuntu.sh  lenovo_id_login.py  start-chrome-debug.sh  start-playwright-chrome.sh
zdt-sync/tests/: test_json_path.py  test_utils.py
zdt-sync/zdt_sync/: api_collector.py  browser.py  cli.py  full_collector.py  settings.py  utils.py
zdt-sync/zdt_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+1789 files in other folders)
