[project]
name = "lenovo-smart-retail-api"
version = "0.1.0"
description = "FastAPI backend for the Lenovo smart retail cockpit"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.124.0",
  "pydantic>=2.12.0",
  "psycopg[binary]>=3.2.9",
  "qrcode[pil]>=8.2",
  "zxing-cpp>=3.0.0",
]

[tool.uv]
package = false
